--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Mentoring India</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
-</head>
-<body>
+<html lang="en">
+  <head>
+    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+  </head>
+  <body>
+
 <section id="nav-bar">
 <nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="#" style="color: white; padding: 2px;font-weight: 1px;margin-left:10px; "><b>MENTORING INDIA</b></a>
@@ -19,19 +23,19 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">HOME</a>
+        <a class="nav-link" href="index.html">HOME</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">SERVICES</a>
+        <a class="nav-link" href="#services">SERVICES</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">ABOUT US</a>
+        <a class="nav-link" href="#about">ABOUT US</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">TESTIMONIALS</a>
+        <a class="nav-link" href="#testimonials">TESTIMONIALS</a>
       </li>
          <li class="nav-item">
-        <a class="nav-link" href="#">CONTACT US</a>
+        <a class="nav-link" href="#contact">CONTACT US</a>
       </li>
     </ul>
   </div>
@@ -73,9 +77,9 @@ Thus, One to One mentoring will be provided for each and every students from cla
 </div>		
 </section>
 <br>
-<br>
+<br >
 <!-----------skills------->
-  <div class="container text-center">
+  <div class="container text-center"id="services">
   	<h1 class="title">SERVICES</h1>
     <div class="row">
       <div class="col-sm-4  zoom">
@@ -146,7 +150,7 @@ Thus, One to One mentoring will be provided for each and every students from cla
   </div>
 
 <!---------Testimonials---------->
-<section id="testimonials">
+<section id="testimonials" id="testimonials">
 <div class="container">
 	<h1 class="title text-center">Testimonials</h1>
 <div class="row offset-1">
@@ -168,7 +172,7 @@ tempor incididunt ut labore et dolore magna aliqua.</p>
 </section>	
 
 <!----social media------>
-<h1 class="title text-center">CONNECT ON SOCIALMEDIA</h1>
+<h1 class="title text-center"id="about">CONNECT ON SOCIALMEDIA</h1>
 <br>
    <div class="middle">
       <a class="button" href="#">
@@ -184,7 +188,7 @@ tempor incididunt ut labore et dolore magna aliqua.</p>
 
 <!------------Footer---------------->
 <section id="footer">
-<div class="container">
+<div class="container"id="contact">
 <div class="row">
 <div class="col-md-4 footer-box">
 <p style="color: white;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -210,6 +214,7 @@ tempor incididunt ut labore et dolore magna aliqua.</p>
 
 
 
-
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
